Changed index.css to fix the layout issue

--- a/styles/index.css
+++ b/styles/index.css
@@ -201,8 +201,8 @@
 body {
     margin: 0;
     padding: 0;
-    width: 100vw;
-    height: 100vh;
+    /* width: 100vw; */
+    /* height: 100vh; */
     font-family: "Open Sans", sans-serif;
     font-weight: 300;
     font-style: normal;
